@@ -3,6 +3,9 @@
 	bump rep-gtk requirement to 0.90.0, therefore bumped gtk+ requirement
 	to 2.12.0
 
+	* lisp/sawfish/gtk/color-preview.jl: use GtkColorButton instead of
+	GtkPreview (for rep-gtk 0.90.0)
+
 2009-07-02  Christopher Bratusek <zanghar@freenet.de>
 	* po/*
 	* configure.in: de-intltoolize sawfish ... is breaking current
